--- a/src/styles.less
+++ b/src/styles.less
@@ -15,7 +15,7 @@ html {
 html:root {
   /* prettier-ignore */
   font-size: 50PX;
-  font-size: (100vw / 750) * 100; // font-size: 13.33333333vw;
+  font-size: ((100vw / 750) * 100); // font-size: 13.33333333vw;
 }
 @media screen and (min-width: 750px) {
   html:root {
@@ -27,7 +27,7 @@ html:root {
 @media screen and (orientation: landscape) and (min-width: 750px) {
   html:root {
     /* prettier-ignore */
-    font-size: 42PX;
+    font-size: 50PX;
     // font-size: 75PX;
   }
 }
