--- a/src/containers/Combine/styles.module.less
+++ b/src/containers/Combine/styles.module.less
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 30px 10px;
 }
+.figure404,
 .figure {
   width: 90%;
   max-width: 700px;
@@ -12,10 +13,47 @@
   display: block;
   padding: 8px;
   border-radius: 12px;
-  border: 2px dotted #ababab;
-  // border-color: rgba(255, 255, 255, 1);
+  /* prettier-ignore */
+  border: 2PX dotted #ababab;
   line-height: 0;
+  .animate {
+    animation: zoom-in 250ms;
+    // animation: zoom-out 250ms forwards;
+  }
+  @keyframes zoom-in {
+    from {
+      transform: scale(0);
+    }
+    to {
+      transform: none;
+    }
+  }
+
+  @keyframes zoom-out {
+    from {
+      transform: none;
+    }
+    to {
+      transform: scale(0);
+    }
+  }
 }
+.figure404 {
+  text-align: center;
+  filter: grayscale(1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  figcaption {
+    margin-top: 20px;
+    font-size: 28px;
+    font-style: italic;
+    color: gray;
+  }
+}
+
 .sliderGroup {
   margin-top: 30px;
   font-size: 30px;
@@ -37,18 +75,18 @@
 
 .menu {
   padding: 0;
-  margin: 60px 0 20px;
+  margin: 60px 0;
   display: flex;
   justify-content: center;
   .icon {
     display: inline-flex;
     width: 60px;
     height: 60px;
-
-   
+    fill: currentColor;
+    cursor: pointer;
   }
 
   > *:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 60px;
   }
 }
