--- a/src/containers/Create/styles.module.less
+++ b/src/containers/Create/styles.module.less
@@ -35,11 +35,14 @@
 
   .emojiWraper {
     height: 100vh;
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     .emoji {
+      min-width: 50%;
+      min-height: 50%;
     }
   }
 
